css/styles.css
@font-face {
  font-family: 'Cera Pro Black';
  src: url('../static/fonts/cera-pro/Cera\ Pro\ Black.otf') format('opentype');
}
@font-face {
    font-family: 'Cera Pro Medium';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Medium.otf') format('opentype');
}
@font-face {
    font-family: 'Cera Pro Bold';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Bold.otf') format('opentype');
}
@font-face {
    font-family: 'Cera Pro Regular';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Regular.otf') format('opentype');
}
@font-face {
    font-family: 'Cera Pro Thin';
    src: url('../static/fonts/cera-pro/Cera\ Pro\ Light.otf') format('opentype');
}

html{
    scroll-behavior: smooth;
}

:root{
    --gradient: linear-gradient(90deg, #7237BD 0%, #FD0988 99.8%);
    --text-gradient:-webkit-linear-gradient(0deg, #FCDC00 0%
    ,#FBC519 10%
    ,#FA954E 32%
    ,#F96E79 53%
    ,#F95397 72%
    ,#F83CB0 100%);
}

body{
    background-color: #191930;
    background-repeat: no-repeat;
    /* background-image:  url("../static/images/cloud_1.svg"), url("../static/images/cloud_0.svg"); */
    /* background-image:   url("../static/images/cloud_2.svg"); */
    /* background-size: 70%; */
    /* background-position-y: -20vh; */
    /* background-position-x: 50%; */
    font-family: 'Cera Pro Regular', sans-serif !important;
    color: #fff;
}

main{
    max-width: 96vw;
    margin: 2vw auto;
    display: flex;
    flex-direction: column;
    background-color: #0d0b179f;
    border-radius: 2vw;
}

.section{
    padding: calc(2vw + 1vh) 3vw;
}

#hero{
    background-image:  url("../static/images/cloud_1.svg");
    background-size: 85%;
    background-repeat: no-repeat;
    background-position: 50% 70%;
    min-height: 100vh;
}

.nav-link {
    font-family: 'Cera Pro Medium';
}

.navbar-toggler{
    border: none;
}


.hero__text{
    color: #fff;
    font-size: calc(1.85vw + 1.35vh);
    font-family: 'Cera Pro Bold';
    line-height: 1.2;
    /* letter-spacing: 0.2rem; */
    font-weight: 300;
}
.hero__text span:nth-of-type(1){
    font-family: 'Cera Pro Black';
    font-size: calc(9vw + 1vh);
    letter-spacing: 1.5rem;
    line-height: 1;
    font-weight: 400;
}
.hero__text span:nth-of-type(2){
    font-family: 'Cera Pro Bold';
    font-size: calc(2.7vw + 1vh);
    letter-spacing: 1.8rem;
    line-height: 1;
}

.hero__strokes{
    margin-left: auto;
    margin-right: 3rem;
}


/*  About Section*/

.title{
    font-family: 'Cera Pro Medium';
    font-size: 3rem;
    font-weight: 400;
}
  
.title {
    position: relative;
    width: 100%;
}

.title::before {
    content: "";
    position: absolute;
    top: 0;
    width: 50%;
    left: 0;
    height: 3px;
    border-radius: 2px;
    background: var(--gradient);
}
.title::after {
    content: attr(data-after-content);
    position: absolute;
    font-size: 0.8rem;
    line-height: 1;
    left: 52%;
    top: -6px;
    height: fit-content;
    text-transform: uppercase;
    font-family: 'Cera Pro Light', sans-serif;  
}

.about__text{
    font-size: 1.2rem;
    line-height: 2.5rem;
    letter-spacing: 0.1rem;
    padding: 1rem 2rem 1rem 0;
}
.about__text.gradient{
    background: var(--text-gradient);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* Gradient Button */ 
button.btn-outline-light.gradient {
    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
    border: solid 3px transparent;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
    background-origin: border-box;
    background-clip: content-box, border-box;
    box-shadow: 2px 1000px 1px #111020 inset;
}
  
button.btn-outline-light.gradient:hover {
    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
    border: solid 3px transparent;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
    background-origin: border-box;
    background-clip: content-box, border-box;
}

/* Services Section */
#services{
    background: url('../static/images/services/bg.svg');
    background-repeat: no-repeat;
    background-size: 70%; 
    background-position: 0 100%;
    min-height: 80vh;
}


.service-icon{
    height: calc(2vw + 2vh);
    width: calc(2vw + 2vh);
}


.service__card{
    border-radius: 35px;
    height: 413.7px;
    background: url('../static/images/frame.svg') !important;
    background-repeat: no-repeat !important;
    background-size: 100% !important;
    width: 302.15px;
    background-position: center;
    margin: auto;
}

/* .service__card > div{
    background: transparent;
    border-radius: 10px;
    border: 1px solid #fff;
} */

.service__card > div{
    background: transparent;
}


.service__card > div:nth-of-type(odd){
    background: linear-gradient(49.88deg, #38344F 4.62%, #AE66C8 95.2%);
    border-radius: 35px;
    height: 206.5px;
}

.wave__stroke{
    max-width: 15vw;
    position: absolute;
    right: 15px;
}


.MultiCarousel {
    float: left;
    overflow: hidden;
    position:relative;
}
.MultiCarousel .MultiCarousel-inner {
    transition: 1s ease all;
    float: left;
    width: 100vw;
}

.MultiCarousel::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.4) 80%, rgba(0, 0, 0, 0.8) 100%);
    background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.4) 80%, rgba(0, 0, 0, 0.8) 100%);
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    pointer-events: none;
}

.MultiCarousel .MultiCarousel-inner .item {
    float: left;
    cursor: pointer;
}
.MultiCarousel .MultiCarousel-inner .item > div {
    text-align: center;
    padding:10px;
    margin:10px;
    background:#f1f1f1;
    color:#666;
}
.MultiCarousel .leftLst, .MultiCarousel .rightLst {
    position:absolute;
    border-radius:50%;
   top:calc(50% - 20px);
}
.MultiCarousel .leftLst {
    left:0;
}
.MultiCarousel .rightLst {
    right:0;
}
.MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over {
    pointer-events: none;
    background:#ccc;
}

.MultiCarousel-inner img{
    width: 95%;
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
}

.carousel-indicators li{
    background-color: transparent !important;
    border-radius: 50%;
    width: 1rem !important;
    height: 1rem !important;
    border: 2px solid #fff !important;
}

.carousel-indicators li.active{
    background-color: #FB0988 !important;
    border: 2px solid #FB0988 !important;
}


#update-carousel .card{
    border: none;
}

#update-carousel .card-body{
    position: absolute;
    text-align: left;
    bottom: 0;
    left: 0;
    width: 100%;
    border: none;
    background: linear-gradient(90deg, rgba(114, 55, 189, 0.62) 0%, rgba(253, 9, 136, 0.62) 99.8%);
}

#update-carousel .card-title{
    font-family: 'Cera Pro Regulars';
    font-size: 0.8rem;
    font-weight: 400;
}

#update-carousel .card-text{
    font-family: 'Cera Pro Regular';

}


/* LATEST UPDATES SECTION */
.custom-grid{
    display: grid;
    grid-template-columns: 1fr 0.7fr;
    width: 100%;
    align-items: center;
    column-gap: 2rem;
    min-height: 50vh;
}
/* .grid-left{
    
} */
.grid-left > .card{
    height: 300px;
}
.grid-left>.card>img {
    object-fit: cover;
    height: 100%;
}
.grid-right{
    display: flex;
    flex-direction: column;
    row-gap: 2rem;
}
.grid-right > .card{
    height: 133px;
    overflow: hidden;
}
.card > img{
    object-fit: cover;
}

.service__grid{
    display: grid;
    grid-template-columns: repeat(4, 1fr);   
    padding-left: 5rem;
}
.service__card {
    height: 300px;
    width: 200px;
    margin: 0;
}
.service-icon {
    height: 30px;
    width: auto;
}
.service__card > .top-wrap{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 10px 40px 0px;
}
.service__card>.bottom-wrap {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 30px 40px 0px;
}
.service__card>div:nth-of-type(odd) {
    background: linear-gradient(49.88deg, #38344F 4.62%, #AE66C8 95.2%);
    border-radius: 25px;
    height: 130px;
}

.double__stroke{
    max-width: 10vw;
    position: absolute;
    right: 15px;
}
.about__img{
    margin-left: auto;
    object-fit: contain;
    width: unset;
    height: unset;
    padding-bottom: 2rem;
}

.container-fluid.section.portfolio{
    margin: 0;
    padding: unset;
    overflow: hidden;
}

@media screen and (max-width: 600px) {
    body{
        background-size: 80vh;
        background-position: 50% 10%;
    }
    main{
        max-width: 100vw;
        border-radius: none;
        margin: 0;
    }
    #hero{
        background-size: 120%;
        background-position: center;
        min-height: unset;
    }
    #hero > div:nth-child(2){
        margin: 6rem auto 2rem auto;
    }
    .navbar{
        z-index: 1030!important;
        position: absolute;
        background-color: #111020;
    }
    .about__text{
        padding: unset;
    }

    .container-fluid{
        border-radius: 0px;
    }
    .hero__text{
        font-size: 2rem;
        line-height: 3rem;
        letter-spacing: 0.1rem;
    }
    .hero__text span:nth-of-type(1){
        font-size: 3rem;
        letter-spacing: 0.5rem;
        line-height: 5.5rem;
    }
    .hero__text span:nth-of-type(2){
        font-size: 1.6rem;
        letter-spacing: 0.5rem;
    }
    .hero__strokes{
        height: 8rem;
        padding: 0;
        margin-right: 0;
    }
    .title{
        font-family: 'Cera Pro Thin';
        font-size: 1.1rem;
        letter-spacing: 0.1rem;
        line-height: 1.5rem;
        font-weight: 100;
        padding: 0.8rem 0;
    }
    .title::after {
        font-size: 0.6rem;
    }
    .navbar-brand>img{
        width: 10rem;
    }
    .service__grid {
        grid-template-columns: 1fr 1fr;
        padding: unset;
        column-gap: 2rem;
        
        place-items: center;
    }
    .service__card {
        height: 250px;
        width: 150px;
        margin: 0;
    }
    .service-icon {
        height: 20px;
        width: auto;
    }

    .service__card>.top-wrap {        
        padding: 20px 20px 0px;
    }

    .service__card>.bottom-wrap {       
        padding: 15px 20px 0px;
    }
    .service__card>div:nth-of-type(odd) {
        background: linear-gradient(49.88deg, #38344F 4.62%, #AE66C8 95.2%);
        border-radius: 15px;
        height: 100px;
    }
    .wave__stroke{
        max-width: 25vw;
        position: absolute;
        right: 15px;
    }
    .double__stroke{
        max-width: 20vw;
    }
    .fa-2x{
        scale: 0.8;
    }
    .client__text{
        font-size: calc(0.8vw + 0.8vh);
    }
    .custom-grid{
        display: flex;
        flex-direction: column;
    }

    .grid-right{
        display: flex;
        flex-direction: column;
    }
    .grid-left > .card{
        height: auto;
        margin: 2rem auto;
    }
}

